Método operar con desarrollo iniciado en OperacionesTextoANumero y método stringANumero añadido a OperacionesTextoANumero.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/COTARELO/ldominguez/.netbeans/21/build.properties
+user.properties.file=/home/lois/.netbeans/23/build.properties
